Fix text alignment, family

--- a/src/components/Box/_button.module.scss
+++ b/src/components/Box/_button.module.scss
@@ -1,6 +1,7 @@
 @use '../tokens.module';
 
 @mixin button {
+    font: unset;
     font-weight: bolder;
     cursor: pointer;
     border-radius: 4px;
